--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-
   <p><strong>Page not found</strong></p>
+  <img src="/assets/404.jpg" />
 </div>
