--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: '<code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>'
-synopsis: Bioinformatician working on her PhD. Woman shaped thing; weapon of questionable utility. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent.
+title: |
+  <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
+  
+  Bioinformatician working on her PhD. Woman shaped thing; weapon of questionable utility. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent.
 
 see_also:
 - href: "https://github.com/hexylena"
