--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@ title: |
 see_also:
 - href: "https://github.com/hexylena"
   text: hexylena@github.com
+  rel: me
 - href: "mailto:hexylena@galaxians.org"
   text: hexylena@galaxians.org
+  rel: me
 - href: "https://matrix.to/#/@hexylena:matrix.org"
   text: "@hexylena:matrix.org"
+  rel: me
 - href: "https://tech.lgbt/@hexylena"
   text: "@hexylena@tech.lgbt"
+  rel: me
 
 ---
 
