--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: |
   <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
-  
+description: |
   Bioinformatician working on her PhD. Woman shaped thing; weapon of questionable utility. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent.
 
 see_also:
