--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: |
   <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
-synopsis: |
+blurb: |
   Bioinformatician working on her PhD. Woman shaped thing; weapon of questionable utility. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent.
 
 see_also:
@@ -15,8 +15,8 @@ see_also:
 - href: "https://matrix.to/#/@hexylena:matrix.org"
   text: "@hexylena:matrix.org"
   rel: me
-- href: "https://tech.lgbt/@hexylena"
-  text: "@hexylena@tech.lgbt"
+- href: "https://galaxians.garden/hexylena"
+  text: "@hexylena@galaxians.garden"
   rel: me
 
 ---
