--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: |
   <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
 blurb: |
-  Bioinformatician working on her PhD. Systems witch living in the network. I like video games, sewing, and occasionally I do CTFs with my girlfriend.
+  weapon of questionable utility; probably just UXO. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia.
 
 see_also:
 - href: "mailto:hexylena@galaxians.org"
