--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: |
   <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
 blurb: |
-  Bioinformatician working on her PhD. Woman shaped thing; weapon of questionable utility. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent.
+  Bioinformatician working on her PhD. Systems witch living in the network. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia. Some flavour of neurodivergent. Reach Heaven Through Violence.
 
 see_also:
 - href: "https://github.com/hexylena"
