--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: |
-  <code class="Nm">Helena</code> &#x2014; <span class="Nd">systems witch living in the network</span>
+  <code class="Nm">hexylena</code> &#x2014; <span class="Nd">systems angel living in the network</span>
 blurb: |
   weapon of questionable utility; probably just UXO. I like video games, sewing, and occasionally I do CTFs with my girlfriend. Go BlueJays ⚾ I make a great focaccia.
 
